# 2DG

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp  vzpch.h
src/vz/: Core.h  Game.cpp  Game.h  Manager.cpp  Manager.h  SpriteSheet.cpp  SpriteSheet.h  Vector.h  Window.cpp  Window.h  main.cpp
src/vz/component/: Component.h  Drawable.cpp  Drawable.h  Position.cpp  Position.h
